Server/openshift-service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-storage-server
spec:
  selector:
    app: file-storage-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
