Server/openshift-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: hello-openshift
